openshiftnew_frontend/react-deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml --provider=openshift
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: react
  name: react
spec:
  replicas: 1
  selector:
    io.kompose.service: react
  strategy:
    resources: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: react
    spec:
      containers:
      - image: ' '
        name: react
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - react
      from:
        kind: ImageStreamTag
        name: react:latest
    type: ImageChange
status: {}
