openshiftnew_frontend/react-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml --provider=openshift
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: react
  name: react
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 80
  selector:
    io.kompose.service: react
status:
  loadBalancer: {}
