openshiftnew_frontend/app-route-frontend.yaml
apiVersion: v1
kind: Route
metadata:
  name: frontend
spec:
  host: witi.frontend.appsrvdev2.conygre.com
  port:
    targetPort: '9090'
  to:
    kind: Service
    name: frontend
